[tool.poetry]
name = "kaggle-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
polars = "^0.20.6"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
xgboost = "^1.7.6"
lightgbm = "^4.0.0"
catboost = "^1.2.1"
joblib = "^1.3.2"
notebook = "^7.0.3"
kaggle = "^1.5.16"
hvplot = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
