[tool.poetry]
name = "python-raw"
version = "0.1.0"
description = ""
authors = ["Oleg Martynov <fjolne.yngling@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
torch = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
