[tool.poetry]
name = "python-raw"
version = "0.1.0"
description = ""
authors = ["Oleg Martynov <fjolne.yngling@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
notebook = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
